See changes highlighted in blue in Front End Issues docu
Front-end fixes (overlapping search bar, zooming in error, inconsistent sizes, etc.)

--- a/views/static/css/approver.css
+++ b/views/static/css/approver.css
@@ -193,13 +193,13 @@ header{
 }
 
 #select-wrapper{
-	padding: 0.6em 4em;
+	padding: 0.78em 4em;
 	border-bottom: thin solid #dedede;
 	background-color: #f4f4f4;
 }
 
 #search{
-	width: 30em;
+    width: 80%;
 /*	text-indent: 30px;*/
 	background-image: url('../assets/icons/round-search-24px.svg');
 	background-repeat: no-repeat;
@@ -269,6 +269,7 @@ header{
 
 #main-content .content-feed{
 	overflow-y: scroll;
+    max-height: 430px;
 	padding: 0 4em;
 	padding-right: 2.5em;
 }
@@ -345,14 +346,15 @@ header{
 	z-index: 998;
 	right: 0;
 	width: 450px;
-	max-height: 100%;
+/*    max-height: 100%;*/
+	max-height: 490px;
 	overflow-y: scroll;
 	border-left: thin solid #ddd;
 }
 
 #sidebar .action-title{
 	color: var(--theme-color);
-	padding: 1.01em 2em;
+	padding: 1.1em 2em;
 	background-color: #f4f4f4;
 	border-bottom: thin solid #ddd;
 }
